# klatsche

./: .gitignore  Cargo.toml  README.md  klatsche.zsh  klatsche_from_source.zsh
src/: alias.rs  main.rs
