[package]
name = "klatsche"
description = "cli tool to parse and rank known terminal aliases against a given command, intended to be used as a preexec hook for zsh"
version = "1.0.1"
edition = "2021"
authors = ["Joschua Schneider <schneider@joschua.dev>"]
license = "MIT"
repository = "https://github.com/JoschuaSchneider/klatsche/"

[dependencies]
colored = "2.0.0"
